crates/cribo/tests/snapshots/execution_results@bundle_third_party_module_map_extras.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_module_map_extras/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider with speed extra",
    stderr: "",
}
