crates/cribo/tests/snapshots/execution_results@bundle_third_party_namespace_regular_parent_wins.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_namespace_regular_parent_wins/main.py
---
ExecutionResults {
    status: Success,
    stdout: "missing",
    stderr: "",
}
