crates/cribo/tests/snapshots/execution_results@bundle_third_party_pickle_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_pickle_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True bundled round-trip",
    stderr: "",
}
