crates/cribo/tests/snapshots/execution_results@bundle_third_party_pkg_resources_require_constraint.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_pkg_resources_require_constraint/main.py
---
ExecutionResults {
    status: Success,
    stdout: "constraint declared",
    stderr: "",
}
