crates/cribo/tests/snapshots/execution_results@bundle_third_party_requires_dist_propagation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_requires_dist_propagation/main.py
---
ExecutionResults {
    status: Success,
    stdout: "parent bundling pure_child",
    stderr: "",
}
